--- a/style.css
+++ b/style.css
@@ -88,17 +88,16 @@ header{
     height: 100vh;
     display: flex;
     justify-content: center;
-    flex-wrap: wrap;
-    .top{
-        margin-top: 10px;
-      
+  
+   
         h1{
-            text-align: center;
-            font-family: "Raleway", sans-serif;
-        
+            font-family: Alatsi;
+            color: aliceblue;  
         }
+         
+    
+    .buttom{
+
     }
-    ul{
-        text-decoration: none;
-    }
+    
 }
