--- a/style.css
+++ b/style.css
@@ -82,22 +82,35 @@ header{
         height: 100%;
     }
 }
-.section2{
+.section2 {
     background-color: #ec563d;
     width: 100%;
     height: 100vh;
-    display: flex;
-    justify-content: center;
-  
-   
-        h1{
-            font-family: Alatsi;
-            color: aliceblue;  
-        }
-         
-    
-    .buttom{
+    color: white;
 
+    .top {
+        margin-bottom: 50px;
+        display: flex;
+        justify-content: space-around;
+
+        h1 {
+             margin-top: 30px;
+            font-family: Alatsi;
+            font-size: 60px;
+            color: aliceblue;
+        }
     }
-    
+
+    .buttom {
+        display: flex;
+        justify-content: space-around;
+        ul{
+            list-style-type: none;
+            padding-left: 0;
+        }
+    }
+
+    .plusIcon {
+        height: 5%;
+    }
 }
